--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-    margin: 0;
-    padding: 0;
+  background-image: url('../images/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 section#score {
@@ -14,16 +17,15 @@ section#score {
 #board {
   width: 640px;
   height: 640px;
-  margin: 1em auto;
+  margin: 0 auto;
 }
 
 #board  > div {    
-  border: 1px solid black;
+  border: 1px dashed gold;
   float: left;
   width: 64px;
   height: 64px;
 }
-
 
 section#score div {
   width: 10em;
@@ -35,16 +37,15 @@ section#score div {
   border-radius: 1px;
   box-shadow: 1px 1px 5px 1px lightgray;
   margin: 1em auto;
+  color: gold;
 }
-
-
-
 
 .furry {
   background-image: url('../images/furry.png');
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .coin {
   background-image: url('../images/coin.png');
   background-repeat: no-repeat;
@@ -73,4 +74,54 @@ section#over pre {
 
 .invisible {
   display: none;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  visibility: hidden;
+}
+.popup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 3% auto;
+  padding: 2%;
+  background: dimgrey;
+  width: 70%;
+  height: 60%;
+  text-align: center;
+  flex-wrap: wrap;
+  border-radius: 30px;
+}
+.popup .content-1{
+  height: 1em;
+  width: 100%;
+  font-size: 4em;
+  text-shadow: 0px 0px 8px rgb(255, 213, 28);
+  color: #ffffe3;
+}
+.content-2 {
+  background-size: cover;
+  cursor: pointer;
+  width: 200px;
+  height: 50px;
+  border-radius: 12px;
+  color: black;
+  background-color: white;
+  font-size: 18px;
+  font-weight: bold;
+  border: 3px solid rgb(255, 213, 28);
+}
+.content-2:hover {
+  background-color: rgb(255, 213, 28);
+  color: white;
+}
+.show {
+  visibility: visible;
+  opacity: 100;
 }
